feat: Use class handling for route and db
